Fixed spacing of date

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -39,10 +39,15 @@ body {
 .messageComponentDate {
     font-size: 12px;
     margin-left: 7px;
+    padding-top: 5px;
+    line-height: 0.8;
+    display: block;
 }
 .messageComponentName {
     font-style: italic;
     font-weight: bold;
+}
+.messageComponentBody {
 }
 
 a {
